<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/default_screen_bg" >

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/action_bar"
        android:gravity="left"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/back_action_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:src="@drawable/ic_back_action_bar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.62" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center|left"
                android:text="TENTANG APLIKASI"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:padding="8dp" >

            <ImageButton
                android:id="@+id/btn_slide_start"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:src="@drawable/ic_action_previous_item"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@id/action_bar"
        android:background="?android:attr/dividerVertical" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/action_bar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <!-- ==================================================================================== -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/text_about_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/about_app_title"
                android:textSize="18sp"
                android:typeface="serif" />

            <RelativeLayout
                android:id="@+id/about_app_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/dividerVertical" />

                <TextView
                    android:id="@+id/text_about_app_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/about_app_body" />
            </RelativeLayout>

            <!-- ==================================================================================== -->


            <!--  -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/text_app_accurate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/about_accurate_title"
                android:textSize="18sp"
                android:typeface="serif" />

            <RelativeLayout
                android:id="@+id/app_accurate_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/dividerVertical" />

                <TextView
                    android:id="@+id/text_app_accurate_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/about_accurate_body" >
                </TextView>
            </RelativeLayout>

            <!-- =================================================================================== -->


            <!--  -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/text_how_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/about_app_how_title"
                android:textSize="18sp"
                android:typeface="serif" />

            <RelativeLayout
                android:id="@+id/app_how_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/dividerVertical" />

                <TextView
                    android:id="@+id/text_how_app_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/about_app_how_body" >
                </TextView>
            </RelativeLayout>

            <!-- =========================================================================== -->


            <!--  -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/text_help_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/about_app_help_title"
                android:textSize="18sp"
                android:typeface="serif" />

            <RelativeLayout
                android:id="@+id/app_help_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/dividerVertical" />

                <TextView
                    android:id="@+id/text_help_app_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/about_app_help_body" >
                </TextView>
            </RelativeLayout>

            <!-- ========================================================================= -->


            <!--  -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/text_term_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/about_app_term_title"
                android:textSize="18sp"
                android:typeface="serif" />

            <RelativeLayout
                android:id="@+id/app_term_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/dividerVertical" />

                <TextView
                    android:id="@+id/text_term_app_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/about_app_term_body" >
                </TextView>
            </RelativeLayout>

            <!-- ========================================================================= -->


            <!--  -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/text_license_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/about_app_license_title"
                android:textSize="18sp"
                android:typeface="serif" />

            <RelativeLayout
                android:id="@+id/app_license_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/dividerVertical" />

                <TextView
                    android:id="@+id/text_license_app_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/about_app_license_body" >
                </TextView>
            </RelativeLayout>

            <!--  -->


            <!--  -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/text_version_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/about_app_version_title"
                android:textSize="18sp"
                android:typeface="serif" />

            <RelativeLayout
                android:id="@+id/app_version_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="?android:attr/dividerVertical" />

                <TextView
                    android:id="@+id/text_version_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/about_app_version_body" >
                </TextView>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="?android:attr/dividerVertical" />
            <!--  -->
        </LinearLayout>
    </ScrollView>

</RelativeLayout>